<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item
        android:id="@+id/rotate360"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/rotate_string"/>
    <item
        android:id="@+id/zoomInOut"
        android:orderInCategory="100"
        android:title="@string/zoom_In_Out"/>

    <item
        android:id="@+id/fadeInOut"
        android:orderInCategory="100"
        android:title="@string/fade_string"/>

    <item
        android:id="@+id/fadeAndRotate"
        android:orderInCategory="100"
        android:title="@string/fade_and_rotate_string"/>

    <item
        android:id="@+id/translate"
        android:orderInCategory="100"
        android:title="@string/translate"/>
</menu>